# docs/swagger.json
@@ -16,6 +16,32 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/auth/currentuser/orders": {
+            "get": {
+                "description": "gets orders of currently logged in user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "enables the current user to get their orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Order"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/auth/customers": {
             "get": {
                 "description": "Get all customers in the database",
@@ -70,7 +96,7 @@
         },
         "/auth/item": {
             "post": {
-                "description": "Get profile creates a new item",
+                "description": "creates a new item",
                 "consumes": [
                     "application/json"
                 ],
@@ -80,7 +106,7 @@
                 "tags": [
                     "Items"
                 ],
-                "summary": "Get profile creates a new item",
+                "summary": "creates a new item",
                 "parameters": [
                     {
                         "description": "Item",
@@ -131,6 +157,61 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Onboarding"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/orders": {
+            "get": {
+                "description": "Get all orders in the database",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Get all orders in the database",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Order"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "creates a new order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "creates a new order",
+                "parameters": [
+                    {
+                        "description": "Order",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.OrderPost"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.OrderPost"
                         }
                     }
                 }
@@ -288,6 +369,37 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Order": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "customer_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "item_id": {
+                    "type": "integer"
+                },
+                "order_date": {
+                    "type": "string"
+                },
+                "total_price": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.OrderPost": {
+            "type": "object",
+            "properties": {
+                "item_id": {
+                    "type": "integer"
                 }
             }
         }
